# ryzen_power

./: Cargo.toml  LICENSE-BG-DC  LICENSE-WTFNMFPL  README.md
src/: main.rs
