[package]
name = "zen_power_fbsd"
version = "0.1.0"
authors = ["Conrad Meyer <cem@FreeBSD.org>"]
edition = "2018"
license = "WTFNMFPL-1.0 OR BG-DC-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"capsicum" = "0.1.2"
"nix" = "0.20.0"
"sysctl" = "0.4.0"
