[package]
name = "ryzen_power"
version = "0.1.1"
authors = ["Conrad Meyer <cem@FreeBSD.org>"]
edition = "2018"
license = "WTFNMFPL-1.0 OR BG-DC-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"nix" = "0.20.0"

[target.'cfg(target_os = "freebsd")'.dependencies]
"capsicum" = "0.1.2"
"sysctl" = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
"num_cpus" = "1.13.0"
